src/Kasa.css
@font-face{
    font-family: "Montserrat";
    font-weight: 300;
    font-style: normal;
    src: local("Montserrat"), url(/src/Montserrat-VariableFont_wght.woff) format("woff");
}

body{
    max-width:1440px;
    overflow-x: hidden;
    font-family: "Montserrat";
    margin: auto;
}

.Navblock{
    display:flex;
    box-sizing: border-box;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding-top: 15px;
}

.Navblock, a{
    font-size: x-large;
    font-weight: bold;
    color: black;
    text-decoration: none;
}

.NavBar{
    display: flex;
    flex-direction: row;
    gap: 50px;
}

.NavBar>a:hover{
    text-decoration: underline;
}

.footer{
    background-color: black;
    margin-top: 50px;
}

.footerwebp{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 15px;
    padding-top: 15px;
}

.footerimg{
    max-width: 300px;
    max-height: 50px;
}

/* Home specific css */ 

.Guts{
    display: flex;
    flex-direction: column;
    width: 100%;
    margin: auto;
    gap: 20px;
}

.homebanner{
    box-sizing: border-box;
    width: 100%;
    height: 230px;
    border-radius: 25px;
    text-align: center;
    align-items: center;
    margin-top: 30px;
    font-size: xx-large;
    font-weight: 900;
    box-shadow: 0px 3px 0.3rem grey;
    color:white;
}

.darken {
  background-image: 
    linear-gradient(
      rgba(0, 0, 0, 0.5),
      rgba(0, 0, 0, 0.5)
    ),
    url(/public/kasahomebanner.webp);
    background-position: center;
}

.homebanner h1{
    position: relative;
    top: 10%;
}

.CardsContainer{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    background: #F6F6F6;
    border-radius: 25px;
    box-sizing: border-box;
    justify-content: center;
    gap: 40px;
    padding: 32px 0px 32px 0px;
}

.Cards{
    position: relative;
    width: 30%;
    max-height: 340px;
    box-sizing: border-box;
    border-radius: 10px;
    object-fit: cover;
}

.Cards::after {
  content: "";
  position: absolute;
  border-radius: 10px;
  inset: 0;

  background: linear-gradient(
    transparent 50%,
    rgba(0,0,0,0.9) 100%
  );
}

.Cards h2{
    position: absolute;
    z-index: 3;
    left: 20px;
    bottom: 0;
    color: white;
}   

.CardsPics{
    border-radius: 25px;
    max-width: 100%;
    max-height: 100%;
    height: 100%;
    z-index: 1;
}

/* Home specific css ends (needs phone version now) */ 

